--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -15,7 +15,7 @@
 @import "./components/service";
 @import "./components/blog";
 @import "./components/footer";
-
+@import "./components/testimonial";
 ul{
     list-style: none;
 }
