New Pages Added

--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -1,5 +1,8 @@
 .blog {
   padding-bottom: 60px;
+  .heading_tab{
+    text-align: center;
+  }
   &_sec {
     margin-bottom: 30px;
     display: inline-block;
