--- a/src/components/404Page/style.css
+++ b/src/components/404Page/style.css
@@ -1,6 +1,3 @@
-/*-----------------------------------------------*/
-/********* 404 page 21-01-2021 ******************/
-
 .not-found-header .head-inner {
     height: 100vh;
     text-align: center;
@@ -38,7 +35,7 @@
 .not-found-header .text-effect:before, 
 .not-found-header .text-effect:after {
     content: attr(data-tip);
-    color: #534db8;
+    color: #00b4db;
     position: absolute;
     -webkit-clip-path: polygon(0% 100%, 100% 100%, 100% 40%, 0 60%);
     clip-path: polygon(0% 100%, 100% 100%, 100% 40%, 0 60%);
@@ -93,7 +90,7 @@
     }
 }
 .not-found-header .text-effect:after {
-    color: #534db8;
+    color: #00b4db;
     -webkit-clip-path: polygon(0 0, 100% 0%, 100% 36%, 0 56%);
     clip-path: polygon(0 0, 190% 0%, 100% 36%, 0 56%);
     -webkit-animation: slide2 1.5s infinite linear;
@@ -151,7 +148,7 @@
     margin-top: 40px;
 }
 .bttn.dblue {
-    background: #343791;
+    background: #00b4db;
     color: #fff;
     -webkit-box-shadow: 0px 10px 18px 0px rgba(52, 55, 145, 0.3);
     box-shadow: 0px 10px 18px 0px rgba(52, 55, 145, 0.3);
