--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,3 +4,5 @@ table, tr, td, h1, h2, h3, h4, h5, h6, div, span, a, li, ul, ol, p, form, input{
  a:hover,a:focus{text-decoration: none;outline:none !important;}
  input:focus,textarea:focus,button:focus{outline:none !important;}
  input:focus,textarea:focus{border:none}
+ html,body{overflow-x:hidden}
+ 
