--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,7 +1,7 @@
 /***** Footer *****/
 .main-footer {
   position: relative;
-  padding: 100px 0px 0px;
+  padding: 60px 0px 0px;
   background: -webkit-radial-gradient(
     circle farthest-corner at center center,
     #2fb4db 0%,
@@ -20,7 +20,6 @@
   overflow: hidden;
   .widgets-section {
     position: relative;
-    margin-bottom: 40px;
   }
   .logo-widget {
     position: relative;
@@ -122,7 +121,6 @@
     line-height: 1.6em;
     a {
       color: #fff;
-      font-family: "Lato";
       text-transform: capitalize;
     }
     .icon {
@@ -172,9 +170,11 @@
   border-radius: 50%;
   border: 2px dashed #2fb4db;
   animation: rotated 35s infinite linear;
+  overflow: hidden;
 }
 .spinning-circle-bottom {
   width: 350px;
+  overflow: hidden;
   height: 350px;
   right: -4%;
   bottom: -30%;
