--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -42,7 +42,7 @@
   &_btn {
     display: inline-block;
     padding: 15px 50px;
-    border-radius: 50px;
+    border-radius: 50px 0px 50px 0px;
     color: $white;
     background-color: $aqua;
     text-transform: capitalize;
