--- a/src/sass/components/_home_card.scss
+++ b/src/sass/components/_home_card.scss
@@ -39,9 +39,8 @@
       transition: all 0.5s ease;
     }
     .checklist {
-      padding: 0;
-      max-width: 200px;
-      margin: auto;
+      padding: 0;    max-width: 250px;
+      margin-left: auto;
       li {
         font-size: 16px;
         line-height: 26px;
