--- a/src/sass/responsive.scss
+++ b/src/sass/responsive.scss
@@ -1,3 +1,13 @@
+@media (max-width: 992px) {
+  .home_content {
+    max-width: 100%;
+    text-align: center;
+  }
+  .home_img {
+    padding-top: 40px;
+    margin: auto;
+  }
+}
 @media (max-width: 767px) {
   h1 {
     font-size: 35px !important;
@@ -11,7 +21,6 @@
     display: flex;
     justify-content: space-between;
   }
-  // header
   header {
     background-color: #2db0d7;
 
@@ -28,8 +37,6 @@
       }
     }
   }
-  // ./header
-  // home
   .home {
     padding: 140px 0;
     &_content {
@@ -38,49 +45,89 @@
       }
     }
     &_img {
-      margin-top: 40px;
       width: 100%;
       height: 100%;
     }
   }
-  // ./home
-  // home_card
   .home_card {
-    top: -50px;
+    margin-top: 0px;
   }
-  // ./home_card
-  // footer
   .main-footer {
-    padding: 50px 0;
+    padding: 50px 0 0;
     .footer-column {
       margin-bottom: 30px;
     }
+.footer-widget h5{padding-bottom: 10px;}
   }
-  // ./footer
 }
 @media (max-width: 1024px) {
-  .header-top {
-    .top-header-left ul li:nth-last-child(1),
-    .top-header-left ul li:nth-last-child(3) {
-      display: none;
-    }
-    .top-header-left,
-    .top-header-right {
-      flex: 0 0 auto;
-      width: 50%;
-    }
-    .top-header-right {
-      .office-time {
-        margin-right: 10px;
+  .card_space {
+    margin-bottom: 20px;
+  }
+  .services-section {
+    padding: 40px 0;
+    margin: 0;
+  }
+}
+@media (max-width: 576px) {
+  .heading {
+    font-size: 26px;
+  }
+  .home_btn {
+    margin-bottom: 10px;
+  }
+  .innerBanner {
+    .home_bubble .bubble {
+      &.b_four {
+        right: 73px;
+      }
+      &.b_five {
+        right: 128px;
+      }
+      &.b_two{
+left: 130px;
       }
     }
   }
-}
-@media (max-width: 1200px) {
-  .header-top {
-    li {
-      font-size: 15px;
-      margin-right: 15px;
+  .services-section {
+    .upper-box {
+      .icon-two {
+        left: 0;
+        top: 8px;
+      }
+      .icon-one {
+        bottom: 0;
+      }
+      .icon-three {
+        bottom: 50%;
+      }
+    }
+  }
+  .header-top .top-header-right .office-time {
+    margin-right: 0;
+  }
+  .home_card .home-item .checklist {
+    margin: initial;
+    max-width: inherit;
+  }
+
+  .about {
+    margin-top: -60px;
+    .about_img {
+      margin-top: 20px;
+      width: 100%;
+    }
+  }
+  .services-section {
+    padding: 40px 0;
+    margin: 0;
+  }
+  .main-footer {
+    .spinning-circle-top {
+      top: 0;
+    }
+    .spinning-circle-bottom {
+      bottom: 0;
     }
   }
 }
