--- a/src/sass/utils/_utils.scss
+++ b/src/sass/utils/_utils.scss
@@ -10,37 +10,197 @@
 }
 
 /* Global CSS */
-h1{font-size:38px}
-h2{font-size:48px}
-h3{font-size:40px}
-h4{font-size:24px;}
-h5{font-size:24px}
-h6{font-size:20px}
-p{font-size:16px; line-height:26px;}
-
+h1 {
+  font-size: 38px;
+}
+h2 {
+  font-size: 48px;
+}
+h3 {
+  font-size: 40px;
+}
+h4 {
+  font-size: 24px;
+}
+h5 {
+  font-size: 24px;
+}
+h6 {
+  font-size: 20px;
+}
+p {
+  font-size: 16px;
+  line-height: 26px;
+}
 
 /* Heading */
-.heading_tab{position: relative;margin:auto auto 40px;max-width: 450px;}
-.heading_tab:after{content:"";clear: both;display: table}
+.heading_tab {
+  position: relative;
+  margin: auto auto 40px;
+  max-width: 450px;
+}
+.heading_tab:after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
-.heading{position: relative;text-transform: capitalize;     font-family: "Roboto", sans-serif;
+.heading {
+  position: relative;
+  text-transform: capitalize;
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
 }
-.heading_tab .sub_heading{color: $aqua;
+.heading_tab .sub_heading {
+  color: $aqua;
   font-size: 18px;
-  font-weight: 600;}
-.heading .heading{font-weight:600;line-height: 1;font-size: 30px;font-weight: 900;}
+  font-weight: 600;
+}
+.heading .heading {
+  font-weight: 600;
+  line-height: 1;
+  font-size: 30px;
+  font-weight: 900;
+}
 
-.blue_btn{
+.blue_btn {
   padding: 10px 32px;
   color: #fff;
-border-radius: 50px;
-background-color: $aqua;
-transition: all 0.5s ease 0ms;
-border: 1px solid transparent;
-&:hover{
-  border: 1px solid $aqua;
-  color: $aqua;
-  background-color: transparent;
+  border-radius: 50px 0px 50px 0px;
+  background-color: $aqua;
+  transition: all 0.5s ease 0ms;
+  border: 1px solid transparent;
+  &:hover {
+    border: 1px solid $aqua;
+    color: $aqua;
+    background-color: transparent;
+  }
 }
+
+ul {
+  list-style: none;
+}
+
+a,
+a:hover {
+  text-decoration: none !important;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+}
+@keyframes float_up_down {
+  0%,
+  100% {
+    transform: translateY(10px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes rotateme {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.grid-animation {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  div {
+    z-index: 999;
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
+    left: 18%;
+    top: 0;
+    &:nth-child(2) {
+      left: 36%;
+    }
+    &:nth-child(3) {
+      left: 54%;
+    }
+    &:nth-child(4) {
+      left: 82%;
+    }
+    &:after,
+    &:before {
+      position: absolute;
+      width: 7px;
+      height: 7px;
+      left: -3px;
+      top: -7px;
+      content: "";
+      opacity: 1;
+      -webkit-animation: topToBottom 40s linear infinite forwards;
+      animation: topToBottom 40s linear infinite forwards;
+      border-radius: 50%;
+      background-color: #fff;
+    }
+    &:after {
+      &:nth-child(1) {
+        -webkit-animation-delay: 10s;
+        animation-delay: 10s;
+      }
+      &:nth-child(2) {
+        -webkit-animation-delay: 0s;
+        animation-delay: 0s;
+      }
+      &:nth-child(3) {
+        -webkit-animation-delay: 15s;
+        animation-delay: 15s;
+      }
+      &:nth-child(4) {
+        -webkit-animation-delay: 5s;
+        animation-delay: 5s;
+      }
+    }
+    &:before {
+      &:nth-child(1) {
+        -webkit-animation-delay: 35s;
+        animation-delay: 35s;
+      }
+      &:nth-child(2) {
+        -webkit-animation-delay: 25s;
+        animation-delay: 25s;
+      }
+      &:nth-child(3) {
+        -webkit-animation-delay: 30s;
+        animation-delay: 30s;
+      }
+      &:nth-child(4) {
+        -webkit-animation-delay: 20s;
+        animation-delay: 20s;
+      }
+    }
+  }
+}
+@-webkit-keyframes topToBottom {
+  0% {
+    top: 0;
+  }
+  to {
+    top: 100%;
+  }
+}
+
+@keyframes topToBottom {
+  0% {
+    top: 0;
+  }
+  to {
+    top: 100%;
+  }
+}
+.section_padding {
+  padding: 50px 0;
 }
