service,contact,career page create

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -18,7 +18,10 @@
 @import "./components/testimonial";
 @import "./components/InnerBanner";
 
-
 // import Pages
 
-@import './pages/services';
+@import "./pages/services";
+@import "./pages/contact";
+@import "./pages/career/working";
+@import "./pages/career/open-position";
+@import "./pages/about";
