--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -1,26 +1,49 @@
 .blog {
   padding-bottom: 60px;
-  .heading_tab{
+  background-color: #f3f3f4;
+  .heading_tab {
     text-align: center;
   }
   &_sec {
     margin-bottom: 30px;
     display: inline-block;
+    background-color: $white;
+    box-shadow: 0 9px 30px 0 #00000026;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    &:hover {
+      .blog_sec_content {
+        background: $aqua;
+        &_meta {
+          li a,
+          span svg {
+            color: $white;
+          }
+        }
+        &_meta_txt {
+          span,
+          p,
+          h4 {
+            color: $white;
+          }
+        }
+      }
+    }
     &_img {
       border-radius: 5px 5px 0 0;
-      // width: 350px;
-      height: 310px;
+      height: 260px;
       img {
         width: 100%;
         height: 100%;
       }
     }
     &_content {
-      background-color: #fff;
+      background-color: $white;
       padding: 20px;
       position: relative;
       border-radius: 0 0 5px 5px;
-      box-shadow: 5px 5px 30px #0000001a;
+      transition: all 0.3s ease;
       &_meta {
         ul {
           margin-bottom: 8px;
@@ -33,12 +56,13 @@
               font-size: 14px;
               color: #354463;
               font-weight: 600;
+              text-transform: capitalize;
               svg {
                 margin-right: 7px;
                 position: relative;
                 top: -1px;
-            color: $aqua;  
-            }
+                color: $aqua;
+              }
             }
           }
         }
@@ -57,17 +81,21 @@
             font-weight: 600;
             color: #565656;
             span {
-                width: 25px;
-                height: 25px;
-                background-color: #f1f1f1;
-                border-radius: 100%;
-                display: inline-block;
-                text-align: center;
-                line-height: 25px;
-                margin-right: 10px;             
-                 svg {
-                width: 12px;
-                height: 12px;
+              width: 50px;
+              height: 50px;
+              border: 1px solid #ddd;
+              border-radius: 100%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              transition: all 0.3s ease;
+              &:hover {
+                background-color: $aqua;
+                color: $white;
+              }
+              svg {
+                width: 16px;
+                height: 16px;
               }
             }
           }
