--- a/src/sass/responsive.scss
+++ b/src/sass/responsive.scss
@@ -1,6 +1,59 @@
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1300px !important;
+  }
+  .service-box-titel h2 {
+    font-size: 45px;
+  }
+}
+
+@media (min-width: 1400px) {
+  #homeSlider {
+    padding-top: 250px;
+    padding-bottom: 0;
+  }
+}
+
+@media (min-width: 1368px) and (max-width: 1600px) {
+  .container {
+    max-width: 1400px !important;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .container {
+    max-width: 1300px !important;
+  }
+}
+@media (max-width: 991px) {
+  .container {
+    max-width: 100% !important;
+  }
+  header {
+    background-color: #2db0d7;
+
+    .navbar {
+      padding: 8px 0;
+      .navbar-nav {
+        li {
+          line-height: 30px;
+          padding: 7px 0px;
+        }
+        div {
+          padding: 7px 0 !important;
+        }
+      }
+    }
+  }
+  .counter_section .counter {
+    margin: 15px auto;
+  }
+  .testimonial_content {
+    margin-bottom: 25px;
+  }
+}
 @media (max-width: 992px) {
   .home_content {
-    max-width: 100%;
+    max-width: 100% !important;
     text-align: center;
   }
   .home_img {
@@ -20,22 +73,6 @@
     flex: 0 0 100% !important;
     display: flex;
     justify-content: space-between;
-  }
-  header {
-    background-color: #2db0d7;
-
-    .navbar {
-      padding: 8px 0;
-      .navbar-nav {
-        li {
-          line-height: 30px;
-          padding: 7px 0px;
-        }
-        div {
-          padding: 7px 0 !important;
-        }
-      }
-    }
   }
   .home {
     padding: 140px 0;
@@ -57,10 +94,51 @@
     .footer-column {
       margin-bottom: 30px;
     }
-.footer-widget h5{padding-bottom: 10px;}
+    .footer-widget h5 {
+      padding-bottom: 10px;
+    }
+  }
+
+  .working-section .working-tab {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+
+    .column {
+      display: flex;
+      justify-content: space-evenly;
+      text-align: center;
+      flex-direction: column;
+      padding: 30px 20px;
+      .icon {
+        gap: 20px;
+        img {
+          margin-right: 0;
+        }
+      }
+    }
+    .job-apply-box {
+      text-align: center;
+
+      .left-side {
+        margin-bottom: 20px;
+
+        span {
+          margin-right: 8px;
+        }
+      }
+    }
+  }
+  p,
+  .about-section .inner-column .text {
+    font-size: 14px !important;
+    line-height: 24px !important;
   }
 }
 @media (max-width: 1024px) {
+  .main-testimonial-slider {
+    margin-top: 40px;
+  }
   .card_space {
     margin-bottom: 20px;
   }
@@ -84,8 +162,8 @@
       &.b_five {
         right: 128px;
       }
-      &.b_two{
-left: 130px;
+      &.b_two {
+        left: 130px;
       }
     }
   }
