career-details, thank-you page create with responsive

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -25,3 +25,5 @@
 @import "./pages/career/working";
 @import "./pages/career/open-position";
 @import "./pages/about";
+@import "./pages/career/career-details";
+@import "./components/thank-you";
