--- a/src/sass/components/_InnerBanner.scss
+++ b/src/sass/components/_InnerBanner.scss
@@ -9,6 +9,7 @@
   margin-top: 70px;
   .inner_heading {
     font-weight: 600;
+    color: $white;
   }
   .home_bubble {
     animation: float_up_down 5s linear infinite;
@@ -32,7 +33,7 @@
         height: 30px;
       }
       &.b_two {
-        background: #fff;
+        background: $white;
         opacity: 0.9;
         top: 50%;
         left: 155px;
