--- a/src/sass/utils/_utils.scss
+++ b/src/sass/utils/_utils.scss
@@ -65,7 +65,7 @@ p {
 
 .blue_btn {
   padding: 10px 32px;
-  color: #fff;
+  color: $white;
   border-radius: 50px 0px 50px 0px;
   background-color: $aqua;
   transition: all 0.5s ease 0ms;
@@ -145,7 +145,7 @@ body {
       -webkit-animation: topToBottom 40s linear infinite forwards;
       animation: topToBottom 40s linear infinite forwards;
       border-radius: 50%;
-      background-color: #fff;
+      background-color: $white;
     }
     &:after {
       &:nth-child(1) {
