email send with form

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -27,3 +27,8 @@
 @import "./pages/about";
 @import "./pages/career/career-details";
 @import "./components/thank-you";
+
+// import Pages
+
+@import "./dashborad/leftheader";
+@import "./dashborad/rightsidebar";
