--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -21,3 +21,11 @@
     @content;
   }
 }
+@mixin flex($direction, $items, $justify) {
+  display: flex;
+  flex-direction: $direction;
+  align-items: $items;
+  justify-content: $justify;
+}
+
+// @include flex(row, center, center);
